<resources>
    <string name="app_name">Pizzeria Leśna</string>

    <string name="register">Zarejestruj</string>
    <string name="login">Zaloguj</string>
    <string name="loggout">Wyloguj</string>
    <string name="dont_have_acc_register">Nie masz konta? Zarejestruj się!</string>
    <string name="register_success">Rejestracja przebiegła pomyślnie!</string>
    <string name="open_app">Uruchamianie aplikacji</string>
    <string name="save">Zapisz</string>

    <!-- Validation -->
    <string name="name_incorect">Wprowadź poprawne imię</string>
    <string name="last_name_incorect">Wprowadź poprawne nazwisko</string>
    <string name="email_incorect">Wprowadź poprawny adres email</string>
    <string name="password_incorect">Hasło powinno zawierać minimum 8 znaków</string>
    <string name="phone_incorect">Wprowadź poprawny numer telefonu</string>
    <string name="street_incorrect">Wprowadź poprawną nazwę ulicy</string>
    <string name="street_nr_incorect">Wprowadź poprawny numer domu</string>
    <string name="city_incorrect">Wprowadź poprawną nazwę miejscowości</string>
    <string name="zip_code_incorrect">Wprowadź poprawny kod pocztowy</string>
    <string name="incorrect_sing_in_pass">Niepoprany email lub hasło</string>
    <string name="register_problem">Nieudało się zarejestrować użytkownika</string>
    <string name="forget_password">Zresetuj hasło</string>

    <string name="incorect_new_password">Hasła się nie zgadzają</string>
    <string name="incorect_oldw_password">Niepoprawne hasło</string>
    <!-- Data -->
    <string name="name">Imię</string>
    <string name="surnamee">Nazwisko</string>
    <string name="email">Adres email</string>
    <string name="password">Hasło</string>
    <string name="phone_nr">Numer telefonu</string>
    <string name="street">Ulica</string>
    <string name="house_nr">Nr domu</string>
    <string name="city">Miejscowość</string>
    <string name="zip_code">Kod pocztowy</string>

    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="confirm_password">Potwierdź nowe hasło</string>

    <string name="edit_success">Zapisano nowe dane.</string>

    <string name="password_reset">Na twoją pocztę email zostały wysłane instrukcje zmiany hasła</string>
    <string name="acc_no_exist">Brak użytkownika o podanym e-mailu w bazie</string>

    <string name="change_password">Zmień hasło</string>
    <string name="change_pass_succ">Zmieniono hasło</string>
    
    <!-- Menu -->
    <string name="menu_pizze">Menu Pizze</string>
    <string name="obiady">Dania obiadowe i inne</string>
    <string name="promocje">Promocje i\n wydarzenia</string>
    <string name="fb">Facebook</string>
    <string name="imprezy">Imprezy\n okolicznościowe</string>
    <string name="adres">Adres i kontakt</string>
    <string name="price">Cena:</string>
    <string name="fast_food">Kebab</string>
    <string name="salat">Sałatki</string>
    <string name="zapieksy">Zapiekanki</string>
    <string name="inne_menu">Hod-dogi, Hamburgery i inne</string>
    <string name="extras">DODATKI</string>

    <string name="pizza_rozmiar">Wybierz rozmiar pizzy</string>
    <string name="wybierz_pizze">Dodaj pizze do koszyka</string>
    <string name="rozmiar_hint">Rozmiar</string>

    <string name="kebab_rodzaj">Dodaj kebab do koszyka</string>
    <string name="mieso_rodzaj">Wybierz mięso</string>
    <string name="mieso_hint">Mięso</string>

    <string name="dodaj_do_koszyka">Dodaj do koszyka</string>
    <!-- UTILS -->
    <string name="google_android_map_api_key">AIzaSyBTl94XORxuPnN7QkTc_9JImOK3o6VJp3k</string>
    <string name="services_error">Błąd serwisu</string>
    <string name="zl">\u0020zł</string>
    <string name="server_error">Błąd serwera. Sprawdź swoje połączenie z internetem</string>
    <string name="phone_permission">Zezwalaj aplikacji <b>Pizzeria Leśna</b> na nawiązywanie połączeń telefonicznych i zarządzanie nimi</string>
    <string name="localization_permission">Zezwalaj aplikacji <b>Pizzeria Leśna</b> na dostęp do informacji o lokalizacji tego urządzenia</string>

    <string name="fa_info_icon">&#xf05a;</string>
    <string name="fa_checked">&#xf058;</string>
    <string name="fa_unchecked">&#xf111;</string>


    <string name="info_text">Strefa 1: \nKosz dostawy na terenie miasta Kraśniewice wynosi 3zł\nPrzy zamówieniu powyżej 50 zł dostawa gratis.\n Strefa 2: \nPoza terenem miasta koszt dostawy uzależniony jest od odległości:\n1 km = 1.5zł.</string>
    <string name="text_imprezy">Nasza pizzeria organizuje imprezy okolicznościowe - zarówno rodzinne, szkolne czy okolicznościowe. Naszym Klientom proponujemy ułożenie jadłospisu zgodnie z własnymi gustami. Ogromnym atutem naszej oferty jest możliwość skomponowania indywidualnej karty, zawierającej kilka pozycji, spośród których Zaproszeni mogą wybrać coś dla siebie. Z uwagą słuchamy i wdrażamy pomysły naszych Klientów w życie. Dbamy o to, by wszystkie czynniki współgrały ze sobą, wpływając pomyślnie na satysfakcję i zadowolenie wszystkich uczestników uroczystości.   \n\n\nSzczególną popularnością wśród naszych Gości cieszą się imprezy rodzinne. Chrzciny w przyjaznej atmosferze, komunie z najbliższymi, wzruszające jubileusze – te i inne okazje sprzyjają spotkaniom przy wspólnym stole i pozwalają zacieśnić więzy między dawno niewidzianymi osobami. Dbamy o to, aby wszyscy uczestnicy mogli odpowiednio celebrować ważne dla nich wydarzenie, a ich rozmowom towarzyszyło smaczne jedzenie, elegancki wystrój, podkreślający podniosłość chwili oraz profesjonalna obsługa gotowa spełnić wszystkie życzenia.</string>
</resources>
