<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baground_gray"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_marginTop="@dimen/view_spacing_small"
        android:id="@+id/fragment_login_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginRight="@dimen/left_right_padding"
        android:layout_marginBottom="50dp"
        android:src="@drawable/pizzeria_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_login_logo"
        android:orientation="vertical"
        android:paddingLeft="@dimen/left_right_padding"
        android:paddingRight="@dimen/left_right_padding">

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            app:hint="@string/email" />

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/password"
            android:layout_marginBottom="@dimen/between_input_margin"
            android:inputType="textPassword"
            app:password="true"
            />

        <Button
            android:background="@drawable/rounded_button_background"
            android:id="@+id/fragment_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_input_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_bottom_text_small"
            android:text="@string/login"
            android:textAllCaps="false"/>
        
        <TextView
            android:id="@+id/fragment_login_register_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acc_register"
            android:textColor="@color/base_blue"
            android:textSize="@dimen/small_text"
            android:layout_marginBottom="@dimen/view_spacing_small"
            android:gravity="right"/>
        <TextView
            android:id="@+id/fragment_login_register_remind_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/base_blue"
            android:textSize="@dimen/small_text"
            android:gravity="right"/>

    </LinearLayout>
</RelativeLayout>