<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baground_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/left_right_padding"
        android:orientation="vertical"
        android:padding="@dimen/left_right_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wypełnij poprawnie wszystkie pola aby zmienić hasło. Pamiętaj, że hasło powinno zawierać minimum 8 znaków."
            android:textColor="@color/black"
            android:textSize="@dimen/normall_text"
            android:layout_marginBottom="@dimen/view_spacing_small"/>

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_change_passwor_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            android:inputType="textPassword"
            app:hint="@string/old_password"
            app:password="true" />

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_change_passwor_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            android:inputType="textPassword"
            app:hint="@string/new_password"
            app:password="true" />

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_change_passwor_new_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            android:inputType="textPassword"
            app:hint="@string/confirm_password"
            app:password="true" />

        <Button
            android:id="@+id/fragment_change_passwor_change_password"
            style="@style/DefaultRoundedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_input_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_bottom_text_small"
            android:background="@drawable/rounded_button_background"
            android:text="@string/change_password" />
    </LinearLayout>
</LinearLayout>