<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/baground_gray"
        android:orientation="vertical"
        android:paddingLeft="@dimen/left_right_padding"
        android:paddingRight="@dimen/left_right_padding"
        android:paddingTop="@dimen/left_right_padding"
        app:layout_goneMarginRight="@dimen/left_right_padding">

        <RelativeLayout
            android:id="@+id/fragment_my_profile_data_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/small_text">

            <TextView
                android:id="@+id/fragment_my_profile_header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/left_right_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/bigl_text"
                android:text="Moje dane" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/fragment_my_profile_header_text"
                android:background="@color/base_brown"
                android:gravity="bottom" />
        </RelativeLayout>

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_my_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            app:hint="@string/name" />

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_my_profile_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            app:hint="@string/surnamee"
            android:focusableInTouchMode="false"/>

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_my_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            app:hint="@string/email" />

        <wfiis.pizzerialesna.customViews.InputEditTextView
            android:id="@+id/fragment_my_profile_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            android:inputType="number"
            app:hint="@string/phone_nr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <wfiis.pizzerialesna.customViews.InputEditTextView
                android:id="@+id/fragment_my_profile_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/between_input_margin"
                android:layout_marginRight="@dimen/between_input_margin"
                android:layout_weight="1.0"
                app:hint="@string/street" />

            <wfiis.pizzerialesna.customViews.InputEditTextView
                android:id="@+id/fragment_my_profile_street_nr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/between_input_margin"
                android:layout_weight="1.5"
                app:hint="@string/house_nr" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <wfiis.pizzerialesna.customViews.InputEditTextView
                android:id="@+id/fragment_my_profile_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/between_input_margin"
                android:layout_marginRight="@dimen/between_input_margin"
                android:layout_weight="1.0"
                app:hint="@string/city" />

            <wfiis.pizzerialesna.customViews.InputEditTextView
                android:id="@+id/fragment_my_profile_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/between_input_margin"
                android:layout_weight="1.5"
                android:inputType="number"
                app:hint="@string/zip_code" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/small_text">

            <TextView
                android:id="@+id/fragment_my_profile_permission_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/left_right_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/bigl_text"
                android:text="Moje zgody" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/fragment_my_profile_permission_header"
                android:background="@color/base_brown"
                android:gravity="bottom" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_input_margin"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fragment_my_profile_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:buttonTint="@color/base_brown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wyrażam dobrowolną zgodę na przetwarzanie danych osobowych podanych przeze mnie za pośrednictwem aplikacji Pizzerii Leśnej."
                android:textColor="@color/base_blue"
                android:textSize="@dimen/small_text" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
